# newsviber

./: CHANGELOG.md  README.md  README_ZH.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
public/: startup-shell.css
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: automation.rs  chat.rs  creative.rs  db.rs  lib.rs  main.rs
src-tauri/src/fetchers/: jina.rs  mod.rs  rss.rs  scraper.rs
src/components/article/: ArticleContent.test.tsx  ArticleContent.tsx
src/components/automation/: AutomationReportDiscussionPanel.test.tsx  AutomationReportDiscussionPanel.tsx
src/components/chat/: ChatMarkdown.test.tsx  ChatMarkdown.tsx
src/components/creative/: CreativeCardDiscussionPanel.test.tsx  CreativeCardDiscussionPanel.tsx
src/components/layout/: MainLayout.test.tsx  (+9 more)
src/hooks/: streaming-conversation-state.test.ts  streaming-conversation-state.ts  use-main-menu-scroll-memory.ts  use-release-context-menu-policy.test.tsx  use-release-context-menu-policy.ts  use-scoped-scroll-memory.test.tsx  use-scoped-scroll-memory.ts  use-streaming-conversation.ts
src/lib/: ai-config.test.ts  ai-config.ts  ai-provider-config.ts  ai-streaming.test.ts  ai-web-search.test.ts  ai.test.ts  ai.ts  app-settings.test.ts  app-settings.ts  app-startup.test.ts  app-startup.ts  article-html.test.ts  article-html.ts  automation-events.ts  automation-report.test.ts  automation-report.ts  automation-service.test.ts  automation-service.ts  chat-prompts.test.ts  chat-prompts.ts  citations.ts  creative-card.test.ts  creative-card.ts  creative-events.ts  creative-service.test.ts  creative-service.ts  db.test.ts  db.ts  global-chat-service-db.test.ts  global-chat-service.test.ts  global-chat-service.ts  i18n.test.ts  i18n.ts  language-settings.ts  news-events.ts  news-service.test.ts  news-service.ts  runtime-fetch.ts  source-events.ts  source-fetch.ts  (+20 more)
src/views/: Automation.test.tsx  Automation.tsx  CreativeSpace.test.tsx  CreativeSpace.tsx  GlobalChat.test.tsx  GlobalChat.tsx  NewsDetail.test.tsx  NewsDetail.tsx  NewsList.test.tsx  NewsList.tsx  Settings.test.tsx  Settings.tsx  SourceForm.tsx  SourceManager.test.tsx  SourceManager.tsx
(+67 files in other folders)
