[package]
name = "news-viber"
version = "26.4.1"
description = "News Viber"
authors = ["Pengtao Shi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "get_news_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "runtime-tokio"] }
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.50.0", features = ["full"] }
rss = "2.0.12"
atom_syndication = "0.12.7"
scraper = "0.25.0"
chrono = "0.4.44"
url = "2.5.8"
